# NanoboyAdvance-libretro

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Jenkinsfile  LICENSE  README.md  nba_libretro.info
.github/workflows/: build.yml
source/: audio.cpp  audio.h  common.h  fshelper.cpp  fshelper.h  input.h  main.cpp  video.cpp  video.h
source/io/: audio.cpp  input.cpp  input.h  video.cpp  video.h
source/meta/: nba_libretro.info.in  nba_libretro_defs.h
source/util/: common.h  fs.h  fshelper.cpp  fshelper.h  libretro.h
